feat: adding list of processing activities including backend connection

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -6,5 +6,12 @@
   "navigation": {
     "dashboard": "Dashboard",
     "processingActivities": "Verarbeitungsverzeichnis"
+  },
+  "processing-activities": {
+    "list": {
+      "title": "Verzeichnis der Verarbeitungstätigkeiten",
+      "createdAt": "Erstellt am",
+      "updatedAt": "Aktualisiert am"
+    }
   }
 }
